<resources>
    <string name="app_name">GoogleMapV2</string>
    <string name="maps_api_key">Your key</string>
    <string name="search_map_km_unit">km</string>
    <string name="search_map_1.5km">1.5</string>
    <string name="search_map_3km">3</string>
    <string name="search_map_5km">5</string>
    <string name="search_map_10km">10</string>
    <string name="search_map_30km">30</string>
    <string name="search_map_allkm">ALL</string>
</resources>
